Add car management features and console extensions
Updated `IdentityDemo.Terminal.csproj` to reference new
projects: `IdentityDemo.Extensions` and `IdentityDemo.Infrastructure`.
Introduced a menu-driven interface in `Program.cs` for user
interaction, allowing users to list cars and retrieve car details
by ID. Restructured `ListAllCarsAsync` to improve output
readability with a new `DisplayCarDetails` method. Added
`ConsoleExtensions.cs` for enhanced console output formatting.
Created `IdentityDemo.Extensions.csproj` targeting `net9.0`
and updated the solution file to include the new project.

--- a/IdentityDemo.Terminal/IdentityDemo.Terminal.csproj
+++ b/IdentityDemo.Terminal/IdentityDemo.Terminal.csproj
@@ -25,7 +25,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IdentityDemo.Extensions\IdentityDemo.Extensions.csproj" />
     <ProjectReference Include="..\IdentityDemo.Infrastructure\IdentityDemo.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
